--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="topnavigation">
         <!--this is the top bar for accessing all the pages-->
-        <a class="active" href="./Home.html">My KSU Journey!</a> <!--this is the home button-->
+        <a class="active" href="./index.html">My KSU Journey!</a> <!--this is the home button-->
         <a href="./About.html">All About Me</a><!--this is the all about me page-->
         <a href="./contactpage.html">Contact Me!</a><!--this is the contact me page/form-->
     </div>
         <h1>Welcome to my journey at KSU!</h1>
-        <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursing a Bachelors of Science in Cybersecurity.</p>
+        <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursuing a Bachelors of Science in Cybersecurity.</p>
         <a href="./About.html"><h3>Click here to learn about me!</h2></a><!--another button for all about me page-->
         <a href="./contactpage.html"><h3>Click here to contact me!</h2></a><!-- this is another button for the contact page/button-->
 </body>
