--- a/contactpage.html
+++ b/contactpage.html
@@ -10,7 +10,7 @@
     <div class="contactpage">
         <script src="js/contactform.js"></script>
         <a href="./About.html"><h3>Click here to learn about me!</h3></a>
-        <a href="./Home.html"><h3>Click here to go back to home!</h3></a>
+        <a href="./index.html"><h3>Click here to go back to home!</h3></a>
     </div>
 </body>
 </html>
