--- a/contactpage.html
+++ b/contactpage.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="contactpage">
-        <script src="js/contactform.js"></script>
-        <a href="./About.html"><h3>Click here to learn about me!</h3></a>
-        <a href="./index.html"><h3>Click here to go back to home!</h3></a>
+        <script src="js/contactform.js"></script><!--this is the javascript for the contact form-->
+        <a href="./About.html"><h3>Click here to learn about me!</h3></a><!--this is the button for all about me page-->
+        <a href="./index.html"><h3>Click here to go back to home!</h3></a><!--this is the button for the home page-->
     </div>
 </body>
 </html>
