--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="style.css" />
 
-#Home {background-color: Sangria;}
-#About {background-color: Sangria;}
-#Contact {background-color: Sangria;}
+#Home {background-color: 43302E;}
+#About {background-color: 43302E;}
+#Contact {background-color: 43302E;}
 </style>
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, 'Sangria')">Home</button>
-<button class="tablink" onclick="openPage('All About Me!', this, 'Sangria')">About</button>
-<button class="tablink" onclick="openPage('Contact Me!', this, 'Sangria')">Contactpage</button>
+<button class="tablink" onclick="openPage('Home', this, '43302E')">Home</button>
+<button class="tablink" onclick="openPage('All About Me!', this, '43302E')">About</button>
+<button class="tablink" onclick="openPage('Contact Me!', this, '43302E')">Contactpage</button>
 
 
 <div id="Home" class="tabcontent">
   <h3>My KSU Journey!</h3>
   <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursuing a Bachelor of Science in Cybersecurity.</p></p>
-    <a href="./About.html"><h3>Click here to learn about me!</h2></a><!--another button for all about me page-->
-    <a href="./contactpage.html"><h3>Click here to contact me!</h2></a><!-- this is another button for the contact page/button-->
 </div>
 
 <div id="All About Me!" class="tabcontent">
