--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <link rel="stylesheet" href="style.css" />
 
 #Home {background-color: 43302E;}
-#About {background-color: 43302E;}
-#Contact {background-color: 43302E;}
+#All About Me!{background-color: 43302E;}
+#Contact Me! {background-color: 43302E;}
 </style>
 </head>
 <body>
 
 <button class="tablink" onclick="openPage('Home', this, '43302E')">Home</button>
-<button class="tablink" onclick="openPage('All About Me!', this, '43302E')">About</button>
-<button class="tablink" onclick="openPage('Contact Me!', this, '43302E')">Contactpage</button>
+<button class="tablink" onclick="openPage('All About Me!', this, '43302E')">All About Me!</button>
+<button class="tablink" onclick="openPage('Contact Me!', this, '43302E')">Contact Me!</button>
 
 
 <div id="Home" class="tabcontent">
