--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="style.css" />
 
-#Home {background-color: 43302E;}
-#All About Me!{background-color: 43302E;}
-#Contact Me! {background-color: 43302E;}
+#Home {background-color: pink;}
+#All About Me!{background-color: pink;}
+#Contact Me! {background-color: pink;}
 </style>
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, '43302E')">Home</button>
-<button class="tablink" onclick="openPage('All About Me!', this, '43302E')">All About Me!</button>
-<button class="tablink" onclick="openPage('Contact Me!', this, '43302E')">Contact Me!</button>
+<button class="tablink" onclick="openPage('Home', this, 'pink')">Home</button>
+<button class="tablink" onclick="openPage('All About Me!', this, 'pink')">All About Me!</button>
+<button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
 
 
 <div id="Home" class="tabcontent">
