--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+* {box-sizing: border-box}
 <button class="tablink" onclick="openPage('Home', this, 'pink')">Home</button>
 <button class="tablink" onclick="openPage('All About Me!', this, 'pink')">All About Me!</button>
 <button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
