--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <div id="Contact Me!" class="tabcontent">
-    <a href="./contactpage.html">Contact Me!</a><!--this is the contact me page/form-->
+    <!--make javascript for contact me page-->
 </div>
 
 <script>
