--- a/index.html
+++ b/index.html
@@ -1,95 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <style>
 * {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
 
-/* Style the tab */
-.tab {
-  float: left;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  width: 30%;
-  height: 300px;
+/* Set height of body and the document to 100% */
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial;
 }
 
-/* Style the buttons inside the tab */
-.tab button {
-  display: block;
-  background-color: inherit;
-  color: black;
-  padding: 22px 16px;
-  width: 100%;
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
   border: none;
   outline: none;
-  text-align: left;
   cursor: pointer;
-  transition: 0.3s;
+  padding: 14px 16px;
   font-size: 17px;
+  width: 25%;
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
+.tablink:hover {
+  background-color: #777;
 }
 
-/* Create an active/current "tab button" class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
+/* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-  float: left;
-  padding: 0px 12px;
-  border: 1px solid #ccc;
-  width: 70%;
-  border-left: none;
-  height: 300px;
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
 }
+
+#My KSU Journey! {background-color: pink;}
+#All About Me! {background-color: pink;}
+#Contact Me! {background-color: pink;}
 </style>
 </head>
 <body>
 
-<h2>Vertical Tabs</h2>
-<p>Click on the buttons inside the tabbed menu:</p>
+<button class="tablink" onclick="openPage('My KSU Journey!', this, 'pink')">My KSU Journey!</button>
+<button class="tablink" onclick="openPage('All About Me!', this, 'pink')" id="defaultOpen">All About Me!</button>
+<button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
 
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+<div id="My KSU Journey!" class="tabcontent">
+  <h3>My KSU Journey!</h3>
+  <p>Home is where the heart is..</p>
 </div>
 
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+<div id="All About Me!" class="tabcontent">
+  <h3>All About Me!</h3>
+  <p>Some news this fine day!</p> 
 </div>
 
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
-</div>
-
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+<div id="Contact Me!" class="tabcontent">
+  <h3>Contact Me!</h3>
+  <p>Get in touch, or swing by for a cup of coffee.</p>
 </div>
 
 <script>
-function openCity(evt, cityName) {
+function openPage(pageName,elmnt,color) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
   for (i = 0; i < tabcontent.length; i++) {
     tabcontent[i].style.display = "none";
   }
-  tablinks = document.getElementsByClassName("tablinks");
+  tablinks = document.getElementsByClassName("tablink");
   for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
+    tablinks[i].style.backgroundColor = "";
   }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
+  document.getElementById(pageName).style.display = "block";
+  elmnt.style.backgroundColor = color;
 }
 
 // Get the element with id="defaultOpen" and click on it
@@ -97,4 +83,4 @@ document.getElementById("defaultOpen").click();
 </script>
    
 </body>
-</html> 
+</html>
