--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 
 /* Style tab links */
 .tablink {
-  background-color: #E55451;
+  background-color: #D58A94;
   color: white;
   float: left;
   border: none;
@@ -26,7 +26,7 @@ body, html {
 }
 
 .tablink:hover {
-  background-color: #CD5C5C;
+  background-color: #997070;
 }
 
 /* Style the tab content (and add height:100% for full page content) */
