--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 /* Style tab links */
 .tablink {
   background-color: #D58A94;
-  color: white;
+  color: black;
   float: left;
   border: none;
   outline: none;
@@ -31,7 +31,7 @@ body, html {
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-  color: white;
+  color: black;
   display: none;
   padding: 100px 20px;
   height: 100%;
