--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ body, html {
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('My KSU Journey!', this, 'pink')">My KSU Journey!</button>
-<button class="tablink" onclick="openPage('All About Me!', this, 'pink')" id="defaultOpen">All About Me!</button>
+<button class="tablink" onclick="openPage('My KSU Journey!', this, 'pink')"id="defaultOpen>">My KSU Journey!</button>
+<button class="tablink" onclick="openPage('All About Me!', this, 'pink')">All About Me!</button>
 <button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
 
 <div id="My KSU Journey!" class="tabcontent">
