--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, html {
 
 <div id="My KSU Journey!" class="tabcontent">
   <h3>My KSU Journey!</h3>
-  <p>Home is where the heart is..</p>
+  <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursuing a Bachelor of Science in Cybersecurity.</p>
 </div>
 
 <div id="All About Me!" class="tabcontent">
