--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@ body, html {
 </div>
 
 <div id="All About Me!" class="tabcontent">
-  <h3>All About Me!</h3>
-  <p>Some news this fine day!</p> 
+  <h1>A little bit about me!</h1>
+  <h2>BACKGROUND</h2>
+  <p1>I am a Mexican-American first-generation student here at Kennesaw State. My parents grew up in San Luis Potosi, Mexico, and moved to Georgia before I was born. I was born on September 14th, 2001 in Lawrenceville, GA. I have 3 half sisters and 1 half brother. I have lived in Georgia my whole life, but have moved to Cobb County as I entered KSU. Currently, I attend Kennesaw State University as a Cybersecurity Major after changing my major 3 times. I have a lovely family including my partner, Omar, and my beautiful 1-year-old, Omar Jr.. </p1>
+  <h2>EXPERIENCES</h2>
+  <p2>Through my college and work careers, I've gained much experience, but I have yet to learn more about the cybersecurity field. I am proficient in both English and Spanish, in the aspects of reading, writing, and speaking. I have gained knowledge in Python, JavaScript, HTML, and Terraform programming languages. I also have knowledge in Solidworks. I have plenty of skills that make me a good team player, such as desicion-making, promblem solving, and leadership. I am always enjoying to learn more about anything, which make my work ethic above the standard. </p2>
+  <h2>GOALS</h2>
+  <p3>My main goal is to obtain a Cybersecurity internship for the summer before graduating in the Spring of 2026. Another goal is to get a higher-paying job hopefully somewhere where I can start my career in the cybersecurity field. </p3>
 </div>
 
 <div id="Contact Me!" class="tabcontent">
