--- a/index.html
+++ b/index.html
@@ -65,7 +65,38 @@ body, html {
 
 <div id="Contact Me!" class="tabcontent">
   <h3>Contact Me!</h3>
-  <p>Get in touch, or swing by for a cup of coffee.</p>
+  <script>
+    <form id="contact-form" method="POST" action="sendmail.php">
+  <div class="form-row form-error" style="display:none;"></div>
+  <div class="form-row">
+    <label for="contact-form-name">Name:</label>
+    <input id="contact-form-name" class="form-input" type="text" name="name" required>
+  </div>
+  <div class="form-row">
+    <label for="contact-form-email">Email:</label>
+    <input id="contact-form-email" class="form-input" type="email" name="email" required>
+  </div>
+  <div class="form-row">
+    <label for="contact-form-phone">Phone:</label>
+    <input id="contact-form-phone" class="form-input" type="tel" name="phone">
+  </div>
+  <div class="form-row">
+    <label for="contact-form-message">Message:</label>
+    <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
+  </div>
+  <button type="submit">Submit</button>
+</form>
+      .form-row {
+    margin-bottom: 10px;
+}
+
+.form-input {
+    display: block;
+}
+
+.form-error {
+    color: red;
+}
 </div>
 
 <script>
