--- a/index.html
+++ b/index.html
@@ -63,29 +63,32 @@ body, html {
   <p3>My main goal is to obtain a Cybersecurity internship for the summer before graduating in the Spring of 2026. Another goal is to get a higher-paying job hopefully somewhere where I can start my career in the cybersecurity field. </p3>
 </div>
 
-<div id="Contact Me!" class="tabcontent">
-  <h3>Contact Me!</h3>
-  <script>
-    <form id="contact-form" method="POST" action="sendmail.php">
-  <div class="form-row form-error" style="display:none;"></div>
-  <div class="form-row">
-    <label for="contact-form-name">Name:</label>
-    <input id="contact-form-name" class="form-input" type="text" name="name" required>
-  </div>
-  <div class="form-row">
-    <label for="contact-form-email">Email:</label>
-    <input id="contact-form-email" class="form-input" type="email" name="email" required>
-  </div>
-  <div class="form-row">
-    <label for="contact-form-phone">Phone:</label>
-    <input id="contact-form-phone" class="form-input" type="tel" name="phone">
-  </div>
-  <div class="form-row">
-    <label for="contact-form-message">Message:</label>
-    <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
-  </div>
-  <button type="submit">Submit</button>
-</form>
+<div id="popup-form-container" style="display:none;">
+  <div id="Contact Me!" class="tabcontent">
+    <h3>Contact Me!</h3>
+    <script>
+      <form id="contact-form" method="POST" action="sendmail.php">
+    <div class="form-row form-error" style="display:none;"></div>
+    <div class="form-row">
+      <label for="contact-form-name">Name:</label>
+      <input id="contact-form-name" class="form-input" type="text" name="name" required>
+    </div>
+    <div class="form-row">
+      <label for="contact-form-email">Email:</label>
+      <input id="contact-form-email" class="form-input" type="email" name="email" required>
+    </div>
+    <div class="form-row">
+      <label for="contact-form-phone">Phone:</label>
+      <input id="contact-form-phone" class="form-input" type="tel" name="phone">
+    </div>
+    <div class="form-row">
+      <label for="contact-form-message">Message:</label>
+      <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
+</div>
+
       .form-row {
     margin-bottom: 10px;
 }
