--- a/index.html
+++ b/index.html
@@ -36,10 +36,30 @@ body, html {
   padding: 100px 20px;
   height: 100%;
 }
+.popup-form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
-#My KSU Journey! {background-color: pink;}
-#All About Me! {background-color: pink;}
-#Contact Me! {background-color: pink;}
+.popup-form-container form {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 80%;
+    max-width: 500px;
+    margin: 30px auto;
+}
+.My KSU Journey! {background-color: pink;}
+.All About Me! {background-color: pink;}
+.Contact Me! {background-color: pink;}
 </style>
 </head>
 <body>
@@ -62,27 +82,7 @@ body, html {
   <h3>GOALS</h3>
   <p>My main goal is to obtain a Cybersecurity internship for the summer before graduating in the Spring of 2026. Another goal is to get a higher-paying job hopefully somewhere where I can start my career in the cybersecurity field. </p>
 </div>
-#popup-form-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
 
-#popup-form-container form {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
-    margin: 30px auto;
-}
 <div id="popup-form-container" style="display:none;">
   <div id="Contact Me!" class="tabcontent">
     <h3>Contact Me!</h3>
