--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="styles.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
+</body>
+  
 <button class="tablink" onclick="openPage('My KSU Journey!', this, 'pink')" id="defaultOpen">My KSU Journey!</button>
 <button class="tablink" onclick="openPage('All About Me!', this, 'pink')">All About Me!</button>
 <button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
