--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ body, html {
 
 /* Style tab links */
 .tablink {
-  background-color: #555;
-  color: white;
+  background-color: #D58A94;
+  color: black;
   float: left;
   border: none;
   outline: none;
@@ -26,12 +26,12 @@ body, html {
 }
 
 .tablink:hover {
-  background-color: #777;
+  background-color: #997070;
 }
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-  color: white;
+  color: black;
   display: none;
   padding: 100px 20px;
   height: 100%;
