--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@ function openPage(pageName,elmnt,color) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-   
+
+<script>
+  <form id="contact-form" method="POST" action="sendmail.php">
+    <div class="form-row form-error" style="display:none;"></div>
+    <div class="form-row">
+      <label for="contact-form-name">Name:</label>
+      <input id="contact-form-name" class="form-input" type="text" name="name" required>
+    </div>
+    <div class="form-row">
+      <label for="contact-form-email">Email:</label>
+      <input id="contact-form-email" class="form-input" type="email" name="email" required>
+    </div>
+    <div class="form-row">
+      <label for="contact-form-phone">Phone:</label>
+      <input id="contact-form-phone" class="form-input" type="tel" name="phone">
+    </div>
+    <div class="form-row">
+      <label for="contact-form-message">Message:</label>
+      <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
+</script>
 </body>
 </html>
