--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@ body, html {
   padding: 100px 20px;
   height: 100%;
 }
+.popup-form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
+.popup-form-container form {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 80%;
+    max-width: 500px;
+    margin: 30px auto;
+}
 #Home {background-color: red;}
 #News {background-color: green;}
 #Contact {background-color: blue;}
