--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body, html {
 
 <div id="Contact Me!" class="tabcontent">
   <h3>Contact Me!</h3>
-  <p>Get in touch, or swing by for a cup of coffee.</p>
+  <button id="show-popup">Show Contact Form</button>
 </div>
 
 <div id="popup-form-container" style="display:none;">
