--- a/index.html
+++ b/index.html
@@ -96,30 +96,8 @@ body, html {
 
 <div id="Contact Me!" class="tabcontent">
   <h3>Contact Me!</h3>
-  <button id="show-popup">Show Contact Form</button>
-</div>
-
-<div id="popup-form-container" style="display:none;">
-<form id="contact-form" method="POST" action="sendmail.php">
-  <div class="form-row form-error" style="display:none;"></div>
-  <div class="form-row">
-    <label for="contact-form-name">Name:</label>
-    <input id="contact-form-name" class="form-input" type="text" name="name" required>
-  </div>
-  <div class="form-row">
-    <label for="contact-form-email">Email:</label>
-    <input id="contact-form-email" class="form-input" type="email" name="email" required>
-  </div>
-  <div class="form-row">
-    <label for="contact-form-phone">Phone:</label>
-    <input id="contact-form-phone" class="form-input" type="tel" name="phone">
-  </div>
-  <div class="form-row">
-    <label for="contact-form-message">Message:</label>
-    <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
-  </div>
-  <button type="submit">Submit</button>
-</form>
+  <a href="contactpage.html">
+    <button id="show-popup">Show Contact Form</button>
 </div>
   
 <script>
@@ -140,15 +118,6 @@ function openPage(pageName,elmnt,color) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-
-<script>
-  function showPopupForm() {
-  document.getElementById("popup-form-container").style.display = "block";
-}
-
-function hidePopupForm() {
-  document.getElementById("popup-form-container").style.display = "none";
-}
-</script>
+  
 </body>
 </html>
