--- a/contactpage.html
+++ b/contactpage.html
@@ -20,7 +20,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: 000000;
     display: flex;
     justify-content: center;
     align-items: center;
