--- a/contactpage.html
+++ b/contactpage.html
@@ -3,17 +3,6 @@
 <head>
     <title>Contact Form</title>
 <style>
-  .form-row {
-    margin-bottom: 10px;
-}
-
-.form-input {
-    display: block;
-}
-
-.form-error {
-    color: red;
-}
 .popup-form-container {
     position: fixed;
     top: 0;
@@ -36,8 +25,18 @@
     margin: 30px auto;
 }
 </style>
-
 </head>
+<header>
+    .form-row {
+        margin-bottom: 10px;
+}
+    .form-input {
+        display: block;
+}
+    .form-error {
+        color: red;
+}
+</header>
 <body>
 <div id="popup-form-container" style="display:none;"
     <form id="contact-form" method="POST" action="sendmail.php">
