--- a/contactpage.html
+++ b/contactpage.html
@@ -2,73 +2,41 @@
 <html lang="en">
 <head>
     <title>Contact Form</title>
-<style>
-.popup-form-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: 000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.popup-form-container form {
-    background-color: #000000;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
-    margin: 30px auto;
-}
-</style>
-</head>
-<header>
     .form-row {
         margin-bottom: 10px;
 }
+
     .form-input {
         display: block;
 }
+
     .form-error {
         color: red;
 }
-</header>
+</head>
 <body>
-<div id="popup-form-container" style="display:none;"
-    <form id="contact-form" method="POST" action="sendmail.php">
-        <div class="form-row form-error" style="display:none;"></div>
-        <div class="form-row">
-            <label for="contact-form-name">Name:</label>
-            <input id="contact-form-name" class="form-input" type="text" name="name" required>
-        </div>
-        <div class="form-row">
-            <label for="contact-form-email">Email:</label>
-            <input id="contact-form-email" class="form-input" type="email" name="email" required>
-        </div>
-        <div class="form-row">
-            <label for="contact-form-phone">Phone:</label>
-            <input id="contact-form-phone" class="form-input" type="tel" name="phone">
-        </div>
-        <div class="form-row">
-            <label for="contact-form-message">Message:</label>
-            <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
-</div>
+<form id="contact-form" method="POST" action="sendmail.php">
+  <div class="form-row form-error" style="display:none;"></div>
+  <div class="form-row">
+    <label for="contact-form-name">Name:</label>
+    <input id="contact-form-name" class="form-input" type="text" name="name" required>
+  </div>
+  <div class="form-row">
+    <label for="contact-form-email">Email:</label>
+    <input id="contact-form-email" class="form-input" type="email" name="email" required>
+  </div>
+  <div class="form-row">
+    <label for="contact-form-phone">Phone:</label>
+    <input id="contact-form-phone" class="form-input" type="tel" name="phone">
+  </div>
+  <div class="form-row">
+    <label for="contact-form-message">Message:</label>
+    <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
+  </div>
+  <button type="submit">Submit</button>
+</form>
+</body>
+</html>
 
-<script>
-  function showPopupForm() {
-  document.getElementById("popup-form-container").style.display = "block";
-}
-
-function hidePopupForm() {
-  document.getElementById("popup-form-container").style.display = "none";
-}
-</script>
 </body>
 </html>
