--- a/contactpage.html
+++ b/contactpage.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title>Contact Form</title>
+</head>
+<header>
+        <title>Contact Form</title>
     .form-row {
         margin-bottom: 10px;
 }
@@ -13,7 +16,7 @@
     .form-error {
         color: red;
 }
-</head>
+</header>    
 <body>
 <form id="contact-form" method="POST" action="sendmail.php">
   <div class="form-row form-error" style="display:none;"></div>
