--- a/index.html
+++ b/index.html
@@ -28,34 +28,11 @@ body, html {
 .tablink:hover {
   background-color: #997070;
 }
-
-/* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
   color: black;
   display: none;
   padding: 100px 20px;
   height: 100%;
-}
-.popup-form-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.popup-form-container form {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
-    margin: 30px auto;
 }
 .form-row {
     margin-bottom: 10px;
@@ -68,9 +45,26 @@ body, html {
 .form-error {
     color: red;
 }
-#Home {background-color: red;}
-#News {background-color: green;}
-#Contact {background-color: blue;}
+body {background-color: pink;}
+h {
+    font-family: Marker Felt, fantasy;
+    color: 000000;
+    text-align: center;
+    font-size: 300%;
+}
+p1 {
+    font-family: Courier New, monospace;
+    text-align: center;
+    color: 000000;
+    font-size: 160%;
+    border: 2px solid pink;
+    padding: 30px;
+p.thick {
+    font-weight: bold;
+}
+p.normal {
+  font-weight: normal;
+}
 </style>
 </head>
 </body>
