--- a/contactpage.html
+++ b/contactpage.html
@@ -5,7 +5,9 @@
 </head>
 <header>
         <title>Contact Form</title>
-    .form-row {
+</header>
+<style>
+        .form-row {
         margin-bottom: 10px;
 }
 
@@ -16,7 +18,7 @@
     .form-error {
         color: red;
 }
-</header>    
+</style>
 <body>
 <form id="contact-form" method="POST" action="sendmail.php">
   <div class="form-row form-error" style="display:none;"></div>
