--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h {
     text-align: center;
     font-size: 300%;
 }
-p1 {
+p {
     font-family: Courier New, monospace;
     text-align: center;
     color: 000000;
@@ -61,22 +61,22 @@ p.normal {
 <button class="tablink" onclick="openPage('Contact Me!', this, 'pink')">Contact Me!</button>
 
 <div id="My KSU Journey!" class="tabcontent">
-  <h3>My KSU Journey!</h3>
+  <h>My KSU Journey!</h>
   <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursuing a Bachelor of Science in Cybersecurity.</p>
 </div>
 
 <div id="All About Me!" class="tabcontent">
-  <h3>A little bit about me!</h3>
-  <h3>BACKGROUND</h3>
+  <h>A little bit about me!</h>
+  <h>BACKGROUND</h>
   <p>I am a Mexican-American first-generation student here at Kennesaw State. My parents grew up in San Luis Potosi, Mexico, and moved to Georgia before I was born. I was born on September 14th, 2001 in Lawrenceville, GA. I have 3 half sisters and 1 half brother. I have lived in Georgia my whole life, but have moved to Cobb County as I entered KSU. Currently, I attend Kennesaw State University as a Cybersecurity Major after changing my major 3 times. I have a lovely family including my partner, Omar, and my beautiful 1-year-old, Omar Jr.. </p>
-  <h3>EXPERIENCES</h3>
+  <h>EXPERIENCES</h>
   <p>Through my college and work careers, I've gained much experience, but I have yet to learn more about the cybersecurity field. I am proficient in both English and Spanish, in the aspects of reading, writing, and speaking. I have gained knowledge in Python, JavaScript, HTML, and Terraform programming languages. I also know Solidworks. I have plenty of skills that make me a good team player, such as decision-making, problem-solving, and leadership. I am always enjoying learning more about anything, which puts my work ethic above the standard. </p>
-  <h3>GOALS</h3>
+  <h>GOALS</h>
   <p>My main goal is to obtain a Cybersecurity internship for the summer before graduating in the Spring of 2026. Another goal is to get a higher-paying job hopefully somewhere where I can start my career in the cybersecurity field. </p>
 </div>
 
 <div id="Contact Me!" class="tabcontent">
-  <h3>Contact Me!</h3>
+  <h>Contact Me!</h>
   <a href="contactpage.html">
     <button id="show-popup">Show Contact Form</button>
 </div>
