--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body, html {
   padding: 100px 20px;
   height: 100%;
 }
-body {background-color: pink;}
+body {background-color: 997070;}
 h {
     font-family: Marker Felt, fantasy;
     color: 000000;
