--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@ h {
     font-family: Marker Felt, fantasy;
     color: 000000;
     text-align: center;
-    font-size: 300%;
+    font-size: 300%;  
 }
+h1 {
+    font-family: Marker Felt, fantasy;
+    color: 000000;
+    text-align: center;
+    font-size: 200%;
 p {
     font-family: Courier New, monospace;
     text-align: center;
@@ -67,11 +72,11 @@ p.normal {
 
 <div id="All About Me!" class="tabcontent">
   <h>A little bit about me!</h>
-  <h>BACKGROUND</h>
+  <h1>BACKGROUND</h1>
   <p>I am a Mexican-American first-generation student here at Kennesaw State. My parents grew up in San Luis Potosi, Mexico, and moved to Georgia before I was born. I was born on September 14th, 2001 in Lawrenceville, GA. I have 3 half sisters and 1 half brother. I have lived in Georgia my whole life, but have moved to Cobb County as I entered KSU. Currently, I attend Kennesaw State University as a Cybersecurity Major after changing my major 3 times. I have a lovely family including my partner, Omar, and my beautiful 1-year-old, Omar Jr.. </p>
-  <h>EXPERIENCES</h>
+  <h1>EXPERIENCES</h1>
   <p>Through my college and work careers, I've gained much experience, but I have yet to learn more about the cybersecurity field. I am proficient in both English and Spanish, in the aspects of reading, writing, and speaking. I have gained knowledge in Python, JavaScript, HTML, and Terraform programming languages. I also know Solidworks. I have plenty of skills that make me a good team player, such as decision-making, problem-solving, and leadership. I am always enjoying learning more about anything, which puts my work ethic above the standard. </p>
-  <h>GOALS</h>
+  <h1>GOALS</h1>
   <p>My main goal is to obtain a Cybersecurity internship for the summer before graduating in the Spring of 2026. Another goal is to get a higher-paying job hopefully somewhere where I can start my career in the cybersecurity field. </p>
 </div>
 
