--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 }
 
 .tablink:hover {
-  background-color: #997070;
+  background-color: 997070;
 }
 .tabcontent {
   color: black;
@@ -32,7 +32,7 @@ body, html {
   padding: 100px 20px;
   height: 100%;
 }
-body {background-color: 997070;}
+body {background-color: pink;}
 h {
     font-family: Marker Felt, fantasy;
     color: 000000;
@@ -81,7 +81,7 @@ p.normal {
 </div>
 
 <div id="Contact Me!" class="tabcontent">
-  <h>Contact Me!</h>
+  <h1>Contact Me!</h1>
   <a href="contactpage.html">
     <button id="show-popup">Show Contact Form</button>
 </div>
