--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
     text-align: center;
     color: 000000;
     font-size: 160%;
-    border: 2px solid pink;
+    border: 2px solid olive;
     padding: 30px;
 p.thick {
     font-weight: bold;
