--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@ p {
     font-size: 160%;
     border: 2px solid olive;
     padding: 30px;
-p.thick {
-    font-weight: bold;
-}
-p.normal {
-  font-weight: normal;
-}
 </style>
 </head>
 </body>
@@ -67,7 +61,7 @@ p.normal {
 
 <div id="My KSU Journey!" class="tabcontent">
   <h>My KSU Journey!</h>
-  <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State Univerity pursuing a Bachelor of Science in Cybersecurity.</p>
+  <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State University pursuing a Bachelor of Science in Cybersecurity.</p>
 </div>
 
 <div id="All About Me!" class="tabcontent">
