--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ p {
   <h1>Contact Me!</h1>
   <a href="contactpage.html">
     <button id="show-popup">Show Contact Form</button>
+    <button style="text-align:center;">
 </div>
   
 <script>
