--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body, html {
 }
 
 .tablink {
-  background-color: #D58A94;
+  background-color: D58A94;
   color: black;
   float: left;
   border: none;
