--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body, html {
 }
 
 .tablink {
-  background-color: D58A94;
+  background-color: #D58A94;
   color: black;
   float: left;
   border: none;
@@ -24,7 +24,7 @@ body, html {
 }
 
 .tablink:hover {
-  background-color: 997070;
+  background-color: #997070;
 }
 .tabcontent {
   color: black;
