--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
     text-align: center;
     color: 000000;
     font-size: 160%;
-    border: 2px solid olive;
+    border: 2px solid #FF69B4;
     padding: 30px;
 </style>
 </head>
