--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@ body {background-color: pink;}
 h {
     font-family: Marker Felt, fantasy;
     color: 000000;
-    text-align: center;
+    text: center;
     font-size: 300%;  
 }
 h1 {
     font-family: Marker Felt, fantasy;
     color: 000000;
-    text-align: center;
+    text: center;
     font-size: 200%;
 p {
     font-family: Courier New, monospace;
-    text-align: center;
+    text: center;
     color: 000000;
     font-size: 160%;
     border: 2px solid #FF69B4;
