--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body, html {
   background-color: #997070;
 }
 .tabcontent {
+  text-align: center;
   color: black;
   display: none;
   padding: 100px 20px;
