--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ p {
 <div id="My KSU Journey!" class="tabcontent">
   <h>My KSU Journey!</h>
   <p>Hello! My name is Jennifer Reyes, but I go by Jenny. I am a senior at Kennesaw State University pursuing a Bachelor of Science in Cybersecurity.</p>
+  <p>I have done quite a few things while at KSU. I have been a part of many organizations on campus such as OLAS and SHPE. One of most recent achievements was becoming a sister of Lambda Theta Alpha Latin Sorority, Inc.</p>
 </div>
 
 <div id="All About Me!" class="tabcontent">
