--- a/contactpage.html
+++ b/contactpage.html
@@ -18,6 +18,7 @@
     .form-error {
         color: red;
 }
+body {background-color: pink;}
 </style>
 <body>
 <form id="contact-form" method="POST" action="sendmail.php">
